<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Calculadora">

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="83dp"
        android:layout_height="108dp"
        android:background="@color/colorDarkGreen"
        android:text="@string/_Equal"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996"
        android:onClick="equal"
        />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="83dp"
        android:layout_height="108dp"
        android:background="@color/colorCharcoal"
        android:text="@string/_Plus"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        android:onClick="plus"
        />

    <Button
        android:id="@+id/btnSubtraction"
        android:layout_width="83dp"
        android:layout_height="108dp"
        android:background="@color/colorCharcoal"
        android:text="@string/_Substraction"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"
        android:onClick="substraction"
        />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="83dp"
        android:layout_height="108dp"
        android:background="@color/colorCharcoal"
        android:text="@string/_Multiply"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        android:onClick="multiply"
        />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorCharcoal"
        android:text="@string/_Delete"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="delete"
        />

    <Button
        android:id="@+id/btnNumThree"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumThree"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        android:onClick="setThree"
        />

    <Button
        android:id="@+id/btnNumSix"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumSix"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        android:onClick="setSix"
        />

    <Button
        android:id="@+id/btnNumNine"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumNine"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        android:onClick="setNine"
        />

    <Button
        android:id="@+id/btnPoint"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:text="@string/_Point"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="setPoint"
        />

    <Button
        android:id="@+id/btnNumTwo"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumTwo"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        android:onClick="setTwo"
        />

    <Button
        android:id="@+id/btnNumFive"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumFive"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        android:onClick="setFive"
        />

    <Button
        android:id="@+id/btnNumEight"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumEight"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        android:onClick="setEight"
        />

    <Button
        android:id="@+id/btnNumZero"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumZero"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="setZero"
        />

    <Button
        android:id="@+id/btnMplus"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_Mplus"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        android:onClick="mPlus"
        />

    <Button
        android:id="@+id/btnNumFour"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumFour"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        android:onClick="setFour"
        />

    <Button
        android:id="@+id/btnNumOne"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumOne"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        android:onClick="setOne"
        />

    <Button
        android:id="@+id/btnNumSeven"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_NumSeven"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        android:onClick="setSeven"
        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorVermilion"
        android:text="@string/_Reset"
        android:textColor="@color/colorWhite"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        android:onClick="reset"
        />

    <Button
        android:id="@+id/btnMSubstraction"
        android:layout_width="108dp"
        android:layout_height="110dp"
        android:background="@color/colorDarkBlueElectric"
        android:text="@string/_Msubstraction"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        android:onClick="mSubstraction"
        />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="83dp"
        android:layout_height="108dp"
        android:background="@color/colorCharcoal"
        android:text="@string/_Divide"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        android:onClick="divide"
        />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="419dp"
        android:layout_height="155dp"
        android:background="@color/colorBlack"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textSize="55sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

</androidx.constraintlayout.widget.ConstraintLayout>